merge template-user